Fixed spacing issue and added content to each of the slides

--- a/src/components/SlideshowBanner/SlideShowBanner.scss
+++ b/src/components/SlideshowBanner/SlideShowBanner.scss
@@ -63,6 +63,12 @@
                 // animation-delay: 1s;
             }
         }
+        &__content{
+            position: relative;
+            width: 50%;
+            left: 50%;
+            height: 100%;
+        }
     }
 }
 
@@ -75,7 +81,7 @@
 {
     0% {
         opacity: 0;
-        transform: rotate(15deg) scale(1.2);
+        transform: rotate(15deg) scale(2);
     }
     20%{
         opacity: 1;
